# dycove-model

./: .buildinfo  .gitignore  DYCOVE.rst  LICENSE  README.md  README.rst  genindex.html  index.html  objects.inv  paper.bib  paper.md  pyproject.toml  search.html  searchindex.js
.github/workflows/: build.yml  draft-pdf.yml
_autosummary/: dycove.sim.base.HydroEngineBase.html  dycove.sim.base.HydroSimulationBase.html  dycove.sim.coupler.VegetationCoupler.html  dycove.sim.engines.ANUGA_baptist.Baptist_operator.html  dycove.sim.engines.ANUGA_hydro.ANUGA.html  dycove.sim.engines.ANUGA_hydro.AnugaEngine.html  dycove.sim.engines.DFM_hydro.DFM.html  dycove.sim.engines.DFM_hydro.DFMEngine.html  dycove.sim.outputs.OutputManager.html  dycove.sim.simulation_data.HydrodynamicStats.html  dycove.sim.simulation_data.SimulationTimeState.html  dycove.sim.vegetation.MultipleVegetationSpecies.html  dycove.sim.vegetation.SharedVegMethods.html  dycove.sim.vegetation.VegetationSpecies.html  dycove.sim.vegetation_data.VegCohort.html  dycove.sim.vegetation_data.VegetationAttributes.html  dycove.utils.model_loader.ANUGAMapLoader.html  dycove.utils.model_loader.BaseMapLoader.html  dycove.utils.model_loader.DFMMapLoader.html  dycove.utils.plotting.ModelPlotter.html  dycove.utils.plotting.create_nn_interpFunc.html  dycove.utils.simulation_reporting.Reporter.html
_modules/: index.html
_modules/dycove/sim/: base.html  coupler.html  outputs.html  simulation_data.html  vegetation.html  vegetation_data.html
_modules/dycove/utils/: model_loader.html  plotting.html  simulation_reporting.html
_sources/_autosummary/: dycove.sim.base.HydroEngineBase.rst.txt  dycove.sim.base.HydroSimulationBase.rst.txt  dycove.sim.coupler.VegetationCoupler.rst.txt  dycove.sim.engines.ANUGA_baptist.Baptist_operator.rst.txt  dycove.sim.engines.ANUGA_hydro.ANUGA.rst.txt  dycove.sim.engines.ANUGA_hydro.AnugaEngine.rst.txt  dycove.sim.engines.DFM_hydro.DFM.rst.txt  dycove.sim.engines.DFM_hydro.DFMEngine.rst.txt  dycove.sim.outputs.OutputManager.rst.txt  dycove.sim.simulation_data.HydrodynamicStats.rst.txt  dycove.sim.simulation_data.SimulationTimeState.rst.txt  dycove.sim.vegetation.MultipleVegetationSpecies.rst.txt  dycove.sim.vegetation.SharedVegMethods.rst.txt  dycove.sim.vegetation.VegetationSpecies.rst.txt  dycove.sim.vegetation_data.VegCohort.rst.txt  dycove.sim.vegetation_data.VegetationAttributes.rst.txt  dycove.utils.model_loader.ANUGAMapLoader.rst.txt  dycove.utils.model_loader.BaseMapLoader.rst.txt  dycove.utils.model_loader.DFMMapLoader.rst.txt  dycove.utils.plotting.ModelPlotter.rst.txt  dycove.utils.plotting.create_nn_interpFunc.rst.txt  dycove.utils.simulation_reporting.Reporter.rst.txt
_sources/apiref/utils/: index.rst.txt
_sources/background/: index.rst.txt
_sources/examples/: index.rst.txt
_sources/examples/anuga/: tide_channel.rst.txt  tide_channel_from_regions_multiveg.rst.txt
_sources/examples/dfm/: tide_channel.rst.txt  (+2 more)
_sources/installation/: index.rst.txt
_sources/troubleshooting/: index.rst.txt
_sources/userguide/: index.rst.txt
apiref/: index.html
apiref/sim/: index.html
apiref/utils/: index.html
background/: index.html
docs/: requirements.txt
docs/source/: conf.py  index.rst
dycove/: __init__.py  constants.py
dycove/sim/: base.py  coupler.py  outputs.py  simulation_data.py  vegetation.py  vegetation_data.py
dycove/simulation/: base.py  coupler.py  outputs.py  simulation_data.py  vegetation.py  vegetation_data.py
dycove/utils/: array_math.py  baptist_operator.py  gridding.py  log.py  model_loader.py  plotter.py  plotting.py  simulation_reporting.py  sms_mesh_conversion.py
examples/: index.html
examples/anuga/: tide_channel.html  tide_channel_from_regions_multiveg.html  tide_channel_parallel.html
examples/dfm/: tide_channel.html  tide_channel_w_discharge.html  tide_channel_w_discharge_multiveg.html
examples/plotting/: plot_simple_tide_and_channel_ANUGA.py  plot_simple_tide_and_channel_DFM.py
installation/: index.html
joss/: paper.md
tests/: conftest.py  pytest.ini  test_baptist_operator.py  test_engines_anuga.py  test_engines_dfm.py  test_vegetation.py
tests/anuga/: test_anuga.py  test_baptist_operator.py  test_engines_anuga.py
tests/core/: test_simulation_base.py  test_vegetation.py
tests/dfm/: test_dfm.py  test_engines_dfm.py
tests/sample_data/: CE_ex.json  NL_ex.json
troubleshooting/: index.html
userguide/: index.html
(+151 files in other folders)
