[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dycove"
version = "0.1.0"
description = "Dynamic vegetation model for coupling with hydromorphodynamic models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name="N. Tull", email="neltull@lsu.edu"},
    {name="M. Bruckner", email="mbruckner@lsu.edu"}
    ]

keywords = ["vegetation", "hydrodynamics", "morphodynamics", "ANUGA", "Delft3D"]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy"
]

[project.optional-dependencies]
# for coupling with ANUGA
anuga = [
    "anuga>=3.1"
]
# for coupling with Delft3D FM
dfm = [
    "bmi",
    "netCDF4"
    ]
plot = [
    "tqdm",
    "imageio",
    "netCDF4",
    "scipy",
    "matplotlib"
]
dev = [
    "pytest",
    "pytest-cov",
    "coveralls"
]
docs = [
	"sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinx-copybutton",
    "sphinxcontrib-napoleon",
	"m2r2",
	"ipython",
	"ipykernel"
]

[project.urls]
Homepage = "https://github.com/Ecomomo-lab/dycove-model"
Repository = "https://github.com/Ecomomo-lab/dycove-model"
Issues = "https://github.com/Ecomomo-lab/dycove-model/issues"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "dycove*",
]