[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dycove"
version = "0.1.0"
description = "Dynamic vegetation model for coupling with hydromorphodynamic models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name="N. Tull", email="neltull@lsu.edu"},
    {name="M. Brückner", email="mbruckner@lsu.edu"}
    ]

keywords = ["vegetation", "hydrodynamics", "morphodynamics", "ANUGA", "Delft3D"]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy",
    "xarray",
]

[project.optional-dependencies]
# for DYCOVE's plotting module
plot = [
    "matplotlib",
    "tqdm",
    "scipy",
    "imageio",
]

dev = [
    "pytest",
    "pytest-cov",
    "coveralls"
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
]


[project.urls]
Homepage = "https://github.com/Ecomomo-lab/dycove-model"
Repository = "https://github.com/Ecomomo-lab/dycove-model"
Issues = "https://github.com/Ecomomo-lab/dycove-model/issues"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "dycove*",
]

[tool.pytest.ini_options]
markers = ["anuga: tests requiring anuga",
           "dfm: tests requiring bmi",
           ]